--- a/SimpleLog/SimpleLog.csproj
+++ b/SimpleLog/SimpleLog.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
       <PackageReference Include="Serilog.Enrichers.CallerInfo" Version="1.0.3" />
       <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+      <PackageReference Include="Serilog.Sinks.MariaDB" Version="1.0.1" />
     </ItemGroup>
 
 </Project>
